# routes/index.js
@@ -1,12 +1,19 @@
+
 const express = require('express');
 const router = express.Router();
-
-// Base URL
-router.get('/', (req, res) => {
-    res.send("Contacts API")
-});
-
+const passport = require('passport')
 router.use('/', require('./swagger'));
 router.use('/contacts', require('./contacts'));
+router.use('/studies', require('./studies'));
+
+router.get('/login', passport.authenticate('github'), (req,res) => {});
+
+router.get('/logout', function(req, res, next){
+    req.logout(function(err){
+        if (err) {return next(err);}
+        res.redirect('/');
+    });
+});
 
 module.exports = router;
+
